--- a/src/exo3flask.yaml
+++ b/src/exo3flask.yaml
@@ -41,6 +41,10 @@ spec:
         volumeMounts:
         - name: mariadb-volume
           mountPath: /var/lib/mysql
+      volumes:
+      - name: mariadb-volume
+        persistentVolumeClaim:
+          claimName: mysql-pvc
 
 ---
 apiVersion: v1
