--- a/src/exo3flask.yaml
+++ b/src/exo3flask.yaml
@@ -10,7 +10,7 @@ metadata:
   name: exo3-deploy
   namespace: exo3
 spec:
-  replicas: 1
+  replicas: 
   selector:
     matchLabels:
       app: exo3
